--- a/src/WindowsApps.Toolkit.WinUI/WindowsApps.Toolkit.WinUI.vcxproj.filters
+++ b/src/WindowsApps.Toolkit.WinUI/WindowsApps.Toolkit.WinUI.vcxproj.filters
@@ -20,6 +20,12 @@
     <Filter Include="UI\Converters">
       <UniqueIdentifier>{bc20aaff-f013-4b5c-a0c8-ba950e85645b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Structures">
+      <UniqueIdentifier>{7861a76b-06a2-41c4-8c19-088d4d8a5709}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="UI\Extensions">
+      <UniqueIdentifier>{493642e2-a526-4a86-a9fa-877041134ea1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(GeneratedFilesDir)module.g.cpp">
@@ -28,11 +34,17 @@
     <ClCompile Include="pch.cpp">
       <Filter>Other Files</Filter>
     </ClCompile>
+    <ClCompile Include="UI\Converters\ConverterTools.cpp">
+      <Filter>UI\Converters</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Midl Include="Class.idl" />
     <Midl Include="Extensions\StringExtensions.idl">
       <Filter>Extensions</Filter>
+    </Midl>
+    <Midl Include="UI\Converters\BoolNegationConverter.idl">
+      <Filter>UI\Converters</Filter>
     </Midl>
   </ItemGroup>
   <ItemGroup>
@@ -44,6 +56,9 @@
   <ItemGroup>
     <ClInclude Include="pch.h">
       <Filter>Other Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UI\Converters\ConverterTools.h">
+      <Filter>UI\Converters</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
