--- a/tests/WindowsApps.Toolkit.WinUI.Test/WindowsApps.Toolkit.WinUI.Test.vcxproj.filters
+++ b/tests/WindowsApps.Toolkit.WinUI.Test/WindowsApps.Toolkit.WinUI.Test.vcxproj.filters
@@ -5,6 +5,7 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="MainWindow.xaml" />
+    <Page Include="ConvertersPage.xaml" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="App.idl" />
@@ -59,5 +60,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <AppxManifest Include="Package.appxmanifest" />
   </ItemGroup>
 </Project>
