--- a/src/WindowsApps.Toolkit.WinUI/WindowsApps.Toolkit.WinUI.vcxproj.filters
+++ b/src/WindowsApps.Toolkit.WinUI/WindowsApps.Toolkit.WinUI.vcxproj.filters
@@ -39,7 +39,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Midl Include="Class.idl" />
     <Midl Include="Extensions\StringExtensions.idl">
       <Filter>Extensions</Filter>
     </Midl>
@@ -47,6 +46,9 @@
       <Filter>UI\Converters</Filter>
     </Midl>
     <Midl Include="UI\Converters\EmptyObjectToObjectConverter.idl">
+      <Filter>UI\Converters</Filter>
+    </Midl>
+    <Midl Include="UI\Converters\BoolToObjectConverter.idl">
       <Filter>UI\Converters</Filter>
     </Midl>
   </ItemGroup>
