--- a/src/WindowsApps.Toolkit.WinUI/WindowsApps.Toolkit.WinUI.vcxproj.filters
+++ b/src/WindowsApps.Toolkit.WinUI/WindowsApps.Toolkit.WinUI.vcxproj.filters
@@ -51,6 +51,9 @@
     <Midl Include="UI\Converters\BoolToObjectConverter.idl">
       <Filter>UI\Converters</Filter>
     </Midl>
+    <Midl Include="UI\Converters\BoolToVisibilityConverter.idl">
+      <Filter>UI\Converters</Filter>
+    </Midl>
   </ItemGroup>
   <ItemGroup>
     <None Include="WindowsApps.Toolkit.WinUI.def">
