--- a/src/WindowsApps.Toolkit.WinUI/WindowsApps.Toolkit.WinUI.vcxproj
+++ b/src/WindowsApps.Toolkit.WinUI/WindowsApps.Toolkit.WinUI.vcxproj
@@ -155,6 +155,10 @@
       <DependentUpon>UI\Converters\EmptyObjectToObjectConverter.idl</DependentUpon>
       <SubType>Code</SubType>
     </ClInclude>
+    <ClInclude Include="UI\Converters\EmptyStringToObjectConverter.h">
+      <DependentUpon>UI\Converters\EmptyStringToObjectConverter.idl</DependentUpon>
+      <SubType>Code</SubType>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Extensions\StringExtensions.cpp">
@@ -182,6 +186,10 @@
       <DependentUpon>UI\Converters\EmptyObjectToObjectConverter.idl</DependentUpon>
       <SubType>Code</SubType>
     </ClCompile>
+    <ClCompile Include="UI\Converters\EmptyStringToObjectConverter.cpp">
+      <DependentUpon>UI\Converters\EmptyStringToObjectConverter.idl</DependentUpon>
+      <SubType>Code</SubType>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -201,6 +209,9 @@
       <SubType>Designer</SubType>
     </Midl>
     <Midl Include="UI\Converters\EmptyObjectToObjectConverter.idl">
+      <SubType>Designer</SubType>
+    </Midl>
+    <Midl Include="UI\Converters\EmptyStringToObjectConverter.idl">
       <SubType>Designer</SubType>
     </Midl>
   </ItemGroup>
