--- a/src/WindowsApps.Toolkit.WinUI/WindowsApps.Toolkit.WinUI.vcxproj.filters
+++ b/src/WindowsApps.Toolkit.WinUI/WindowsApps.Toolkit.WinUI.vcxproj.filters
@@ -69,6 +69,9 @@
     <Midl Include="UI\Converters\DoubleToObjectConverter.idl">
       <Filter>UI\Converters</Filter>
     </Midl>
+    <Midl Include="UI\Converters\DoubleToVisibilityConverter.idl">
+      <Filter>UI\Converters</Filter>
+    </Midl>
   </ItemGroup>
   <ItemGroup>
     <None Include="WindowsApps.Toolkit.WinUI.def">
