--- a/src/WindowsApps.Toolkit.WinUI/WindowsApps.Toolkit.WinUI.vcxproj
+++ b/src/WindowsApps.Toolkit.WinUI/WindowsApps.Toolkit.WinUI.vcxproj
@@ -159,6 +159,10 @@
       <DependentUpon>UI\Converters\DoubleToObjectConverter.idl</DependentUpon>
       <SubType>Code</SubType>
     </ClInclude>
+    <ClInclude Include="UI\Converters\DoubleToVisibilityConverter.h">
+      <DependentUpon>UI\Converters\DoubleToVisibilityConverter.idl</DependentUpon>
+      <SubType>Code</SubType>
+    </ClInclude>
     <ClInclude Include="UI\Converters\EmptyCollectionToObjectConverter.h">
       <DependentUpon>UI\Converters\EmptyCollectionToObjectConverter.idl</DependentUpon>
       <SubType>Code</SubType>
@@ -206,6 +210,10 @@
       <DependentUpon>UI\Converters\DoubleToObjectConverter.idl</DependentUpon>
       <SubType>Code</SubType>
     </ClCompile>
+    <ClCompile Include="UI\Converters\DoubleToVisibilityConverter.cpp">
+      <DependentUpon>UI\Converters\DoubleToVisibilityConverter.idl</DependentUpon>
+      <SubType>Code</SubType>
+    </ClCompile>
     <ClCompile Include="UI\Converters\EmptyCollectionToObjectConverter.cpp">
       <DependentUpon>UI\Converters\EmptyCollectionToObjectConverter.idl</DependentUpon>
       <SubType>Code</SubType>
@@ -244,6 +252,9 @@
       <SubType>Designer</SubType>
     </Midl>
     <Midl Include="UI\Converters\DoubleToObjectConverter.idl">
+      <SubType>Designer</SubType>
+    </Midl>
+    <Midl Include="UI\Converters\DoubleToVisibilityConverter.idl">
       <SubType>Designer</SubType>
     </Midl>
     <Midl Include="UI\Converters\EmptyCollectionToObjectConverter.idl">
